# BoWWClient

./: CMakeLists.txt  README.md  build_tflite.sh  client_guid.txt  find_deps.sh  setup_env_pi.sh
include/: AudioRingBuffer.h  WebSocketClient.h  tflite_runner.h
models/: README.md
src/: WebSocketClient.cpp  main.cpp  tflite_runner.cpp
